--- a/GExtension/manifest.json
+++ b/GExtension/manifest.json
@@ -6,5 +6,7 @@
     "action": {
       "default_popup": "popup.html",
       "default_icon": "icon16.png"
-    }
+    },
+
+    "permissions": ["activeTab", "scripting"]
   }
