--- a/GExtension/manifest.json
+++ b/GExtension/manifest.json
@@ -4,17 +4,17 @@
   "version": "1.0",
   "description": "Displays RateMyProf rating on school website",
   "permissions": ["activeTab", "storage"],
-  "host_permissions": ["<all_urls>"],
+  "host_permissions": ["http://localhost:3000/*"],
   "background": {
     "service_worker": "background.js"
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://vsb.my.ucalgary.ca/*"],
       "js": ["content.js"]
     }
   ],
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "index.html"
   }
 }
