--- a/GExtension/manifest.json
+++ b/GExtension/manifest.json
@@ -11,7 +11,8 @@
   "content_scripts": [
     {
       "matches": ["https://vsb.my.ucalgary.ca/*"],
-      "js": ["content.js"]
+      "js": ["content.js"],
+      "css": ["style.css"]
     }
   ],
   "action": {
